// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributorsContainer /> renders Contributors component 1`] = `
<Contributors
  data={
    Immutable.List [
      Immutable.Map {
        "id": 1,
        "login": "user1",
      },
      Immutable.Map {
        "id": 2,
        "login": "user2",
      },
    ]
  }
  hasLoaded={true}
  hasMore={true}
  isLoadingMore={false}
  onNext={[Function]}
  total={2}
/>
`;

exports[`<ContributorsContainer /> renders loading Contributors component 1`] = `
<Contributors
  data={
    Immutable.List [
      Immutable.Map {
        "id": 1,
        "login": "user1",
      },
      Immutable.Map {
        "id": 2,
        "login": "user2",
      },
    ]
  }
  hasLoaded={true}
  hasMore={true}
  isLoadingMore={true}
  onNext={[Function]}
  total={2}
/>
`;

exports[`<ContributorsContainer /> renders the end of Contributors component 1`] = `
<Contributors
  data={
    Immutable.List [
      Immutable.Map {
        "id": 1,
        "login": "user1",
      },
      Immutable.Map {
        "id": 2,
        "login": "user2",
      },
    ]
  }
  hasLoaded={true}
  hasMore={false}
  isLoadingMore={false}
  onNext={[Function]}
  total={2}
/>
`;
